[package]
name = "lst-restaking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lst_restaking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = "=0.29.0"
solana-program = "=1.17.34"

[dev-dependencies]
num_enum = "=0.7.0"
spl-memo = "=4.0.0"
